test/Fail/Issue2480false.err
Issue2480false.agda:23.16-61: error: [UnequalTerms]
The terms
  tt
and
  ff
are not equal at type Bool
when checking that the expression
refl {x = ap {A = Bool→cBool} (λ f → f tt) p} has type
ap (λ f → f tt) p ≡ ap (λ f → f ff) p
